[package]
name = "ez80disasm"
version = "0.1.0"
edition = "2021"
authors = ["Tom Morton <tomm8086@gmail.com>"]
license = "BSD-3-Clause"
description = "Zilog eZ80 disassembler"
keywords = ["eZ80", "Agon Light", "disassembler"]
homepage = "https://github.com/tomm/ez80disasm"
repository = "https://github.com/tomm/ez80disasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ez80 = { git = "https://github.com/tomm/ez80.git", rev="94649b67e98e1a8dff1a742d04c7eb7cff8ab538"}
#ez80 = { path = "../ez80" }
